fixed the carousel on mobiles

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -111,9 +111,9 @@ button {
   padding: 0; /* Remove any default padding */
 }
 
-.alice-carousel .alice-carousel__stage-item {
-  margin: 0 10px !important;
-}
+// .alice-carousel .alice-carousel__stage-item {
+//   margin: 0 10px !important;
+// }
 
 // .alice-carousel__stage-item:nth-child(1){
 //   background-color: red !important;
